--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# ✅ 로컬 환경에서 실행할 때
+# 로컬 환경에서 실행할 때
 MYSQLHOST=junction.proxy.rlwy.net
 MYSQLUSER=root
 MYSQLPASSWORD=QpRoQEIQvjwxipoUQDWejQeAGyumiHud
